# conference-papers

./: .gitignore  README.md  analysis.ipynb  constants.py  filtered20-notes.md  filtered20.md  filtered65.md  neurips-2025.ipynb  neurips.ipynb  poster_sessions.py  pyproject.toml  scraper.py
2025-colm/: colm-2025.ipynb  interesting_papers.py
2025-neurips/: filtered_111.md  filtered_113.md  neurips-2025.ipynb  posters.py  session_1.md  session_2.md  session_3.md  session_4.md  session_5.md  session_6.md
2026-iclr/: iclr-2026.ipynb
colm_2025/: final10.md
