[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "conference-papers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openreview-py",
    "deviousutils[all]",
    "ipywidgets",
    "jupyter",
    "pyarrow"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = []